<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/search"
            app:title="@string/app_name"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_characters"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/flow_actions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/abl_toolbar" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/cpi_characters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/abl_toolbar" />

    <ImageView
        android:id="@+id/iv_characters_error"
        android:layout_width="@dimen/large_100"
        android:layout_height="@dimen/large_100"
        android:contentDescription="@string/error"
        android:visibility="gone"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/abl_toolbar"
        app:srcCompat="@drawable/ic_error_filled"
        app:tint="?attr/colorError" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/large_75"
        app:constraint_referenced_ids="btn_skip_character, btn_save_character"
        app:flow_horizontalGap="@dimen/medium_200"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_skip_character"
        style="@style/Widget.Tyander.ImageButton.Search"
        android:contentDescription="@string/skip"
        app:backgroundTint="?attr/colorTertiaryContainer"
        app:srcCompat="@drawable/ic_cross_outlined"
        app:tint="?attr/colorOnTertiaryContainer"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/btn_save_character"
        style="@style/Widget.Tyander.ImageButton.Search"
        android:contentDescription="@string/like"
        app:backgroundTint="?attr/colorSecondaryContainer"
        app:srcCompat="@drawable/ic_heart_filled"
        app:tint="?attr/colorOnSecondaryContainer"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>