<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.chat.list.ChatListFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/chat_list"
            app:title="@string/chats" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_chats"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingVertical="@dimen/smallest"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/abl_toolbar"
        tools:listitem="@layout/item_chat" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/cpi_chats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/abl_toolbar" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_empty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_200"
        android:orientation="vertical"
        android:visibility="gone"
        app:constraint_referenced_ids="tv_empty_title, tv_empty_hint"
        app:flow_verticalGap="@dimen/small_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/abl_toolbar" />

    <TextView
        android:id="@+id/tv_empty_title"
        style="@style/Widget.Tyander.TextView.Empty.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_chats_yet"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_empty_hint"
        style="@style/Widget.Tyander.TextView.Empty.Hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_chats_yet_hint"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>